[package]
name = "eip-4844-alloy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## alloy
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", default-features = false }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "7e39c85", default-features = false }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "7e39c85", default-features = false }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "7e39c85", default-features = false }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "7e39c85", default-features = false }
alloy-node-bindings = { git = "https://github.com/alloy-rs/alloy", rev = "7e39c85", default-features = false }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "7e39c85", default-features = false }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "7e39c85", default-features = false }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "7e39c85", default-features = false }
alloy-rpc-trace-types = { git = "https://github.com/alloy-rs/alloy", rev = "7e39c85", default-features = false }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "7e39c85", default-features = false }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "7e39c85", default-features = false }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "7e39c85", default-features = false }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "7e39c85", default-features = false }
alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", rev = "7e39c85", default-features = false }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "7e39c85", default-features = false }
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", rev = "7e39c85", default-features = false }
alloy-primitives = { version = "0.6.3", features = ["getrandom"] }
alloy-dyn-abi = "0.6.3"
alloy-json-abi = "0.6.3"
alloy-sol-types = "0.6.3"
syn-solidity = "0.6.3"
alloy-chains = "0.1"

alloy-rlp = "0.3.3"

# crypto
c-kzg = { version = "1.0.0", optional = true }
elliptic-curve = { version = "0.13", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10", optional = true }
spki = { version = "0.7", default-features = false }

# async
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
futures-executor = "0.3"
futures-utils-wasm = "0.1"

hyper = { version = "1.2", default-features = false }
hyper-util = "0.1"
http-body-util = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tokio-util = "0.7"
tokio-stream = "0.1"
tower = { version = "0.4", features = ["util"] }
eyre = "0.6.12"

# tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# misc
auto_impl = "1.2"
base64 = "0.22"
bimap = "0.6"
home = "0.5"
itertools = "0.12"
once_cell = { version = "1.19", default-features = false }
pin-project = "1.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, optional = true }
semver = "1.0"
thiserror = "1.0"
thiserror-no-std = "2.0.2"
url = "2.5"
derive_more = "0.99.17"

## serde
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

## misc-testing
arbitrary = "1.3"
assert_matches = "1.5"
proptest = "1.4"
proptest-derive = "0.4"
serial_test = "3.0"
similar-asserts = "1.5"
tempfile = { version = "3.10", optional = true }


[features]
default = ["mohit-kzg"]
mohit-kzg = [
    "dep:c-kzg",
    "dep:sha2",
    "dep:tempfile",
    "alloy-eips/kzg",
    "alloy-consensus/kzg",
    "alloy-eips/std",
    "reqwest",
]
